# ProiectFinalSwiss

./: .csv  Alerts.py  Api.py  Bucharest.csv  Bucharest.txt  Crearecsv.py  Diagram.drawio  Forescast.py  Hawai.csv  Hawai.txt  Language.txt  Location.py  Main.py  Program.py  Sibiu.csv  Sibiu.txt  Untitled Diagram.drawio  pyproject.toml  readme.md  search.py
